recv.2: Improve style in RETURN VALUES
Reported by:		des
MFC after:		3 days
Fixes:			571df2c64a3c1 (Explain how recv functions can)
Reviewed by:		mhorne, des
Approved by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D48995

(cherry picked from commit 7c3c8605d62f5d27a5228a3787aae6e573f77d59)

--- a/lib/libc/sys/recv.2
+++ b/lib/libc/sys/recv.2
@@ -318,14 +318,14 @@ On data reception the
 .Fa msg_len
 field is updated to the length of the received message.
 .Sh RETURN VALUES
-On successful completion,
+On successful completion, the
 .Fn recv ,
 .Fn recvfrom ,
 and
 .Fn recvmsg
-return the number of bytes received.
+functions return the number of bytes received, while the
 .Fn recvmmsg
-returns the number of messages received.
+function returns the number of messages received.
 If no messages are available to be received and the peer has
 performed an orderly shutdown, 0 is returned.
 Otherwise, -1 is returned and
