--- a/lib/libc/sys/open.2
+++ b/lib/libc/sys/open.2
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 3, 2025
+.Dd February 28, 2025
 .Dt OPEN 2
 .Os
 .Sh NAME
@@ -254,12 +254,12 @@ for reading, writing, or for both.
 The open' request for a lock on the file, created with
 .Dv O_CREAT ,
 will never fail
-(provided that the underlying file system supports locking;
+provided that the underlying file system supports locking;
 see also
 .Dv O_SHLOCK
 and
 .Dv O_EXLOCK
-below).
+below.
 .Pp
 If
 .Dv O_EXCL
