procstat.1: correct description of the kstack subcommand after removal of swapping
Reviewed by:	markj
Sponsored by:	The FreeBSD Foundation
Differential revision:	https://reviews.freebsd.org/D49163

--- a/usr.bin/procstat/procstat.1
+++ b/usr.bin/procstat/procstat.1
@@ -230,7 +230,7 @@ For status:
 .El
 .It Ar kstack | Fl k
 Display the stacks of kernel threads in the process, excluding stacks of
-threads currently running on a CPU and threads with stacks swapped to disk.
+threads currently running on a CPU in userspace.
 .Pp
 If the
 .Fl v
