ports.7/history: Don't forget macOS!
Jordan Hubbard, one of the original authors of the FreeBSD
Ports Collection, later went on to create MacPorts, an evolution of
the idea written in TCL instead of Makefiles. Further, NetBSD's pkgsrc
is available natively on macOS. In either case, the idea of ports which
originated here spread to macOS. Note that in the HISTORY section.

MFC after:		3 days
Reviewed by:		carlavilla,Jessica Hawkwell on Community Discord
Approved by:		carlavilla (mentor)
Differential Revision:	https://reviews.freebsd.org/D49205

(cherry picked from commit 8a2c189e893811a44b30696a1af9b5c7800ab60b)

--- a/share/man/man7/ports.7
+++ b/share/man/man7/ports.7
@@ -744,9 +744,9 @@ The Ports Collection
 appeared in
 .Fx 1.0 .
 It has since spread to
-.Nx
-and
-.Ox .
+.Nx ,
+.Ox ,
+and macOS.
 .Sh AUTHORS
 .An -nosplit
 This manual page was originated by
